v2.4/getting-started/kubernetes/installation/hosted/essentials/1.6/operator.yaml
---
layout: null
---
# This manifest includes the following component versions:
#   coreos/prometheus-operator:v0.9.1
---

# This manifest creates a namespace for deploying prometheus-operator,
# Prometheus and alertmanager.
apiVersion: v1
kind: Namespace
metadata:
  name: calico-monitoring
---
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: default-deny
  namespace: calico-monitoring
spec:
  podSelector:
---

# This manifest deploys the Calico Prometheus Operator.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calico-prometheus-operator
  namespace: calico-monitoring
  labels:
    operator: prometheus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        operator: prometheus
    spec:
      # If necessary, uncomment the 2 lines below and edit the nodeSelector
      # key:value pair with appropriate values for your environment.
      #nodeSelector:
        #node.role: infrastructure
      serviceAccountName: calico-prometheus-operator
      containers:
      - name: calico-prometheus-operator
        image: quay.io/coreos/prometheus-operator:v0.9.1
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 100Mi
